<resources>
    <string name="app_name">Memo</string>
    <string name="main_appbar_title">All memos</string>
    <string name="crud_no_image_msg">No Attachment</string>
    <string name="main_no_item_msg1">No memos</string>
    <string name="main_no_item_msg2">Tap the Add button to create a memo.</string>
    <plurals name="main_appbar_cnt_memo">
        <item quantity="one">%d memo</item>
        <item quantity="other">%d memos</item>
    </plurals>
    <string name="menu_save_title">Save</string>
    <string name="menu_attach_title">Attach</string>
    <string name="menu_camera_title">Camera</string>
    <string name="menu_gallery_title">Gallery</string>
    <string name="menu_url_title">URL</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="permission_gallery_rationale">You need permission to select and attach images of the instrument.</string>
    <string name="permission_gallery_denied">Permission denied, image cannot be selected for attachment.</string>
    <string name="permission_camera_rationale">You need permission to attach images using the camera.</string>
    <string name="permission_camera_denied">Permission denied, images cannot be attached using the camera.</string>
    <string name="crud_title_hint">Title</string>
    <string name="crud_body_hint">Body</string>
    <string name="crud_dont_save_msg">As you did not have any input, did not save the memo</string>
    <string name="crud_chk_dialog_msg">Save your changes or discard them?</string>
    <string name="crud_chk_dialog_positive">Save</string>
    <string name="crud_chk_dialog_negative">Discard</string>
    <string name="main_no_title">No Title</string>
    <string name="main_no_body">No Body</string>
    <string name="crud_url_dialog_msg">Please enter the URL of the image to attach.</string>
    <string name="crud_url_dialog_positive">Attachment</string>
    <string name="crud_url_dialog_negative">Cancel</string>
    <string name="crud_url_dialog_deny_http_msg">Network security policy limits access to \'http://\'.\\nPlease use \'https://\'.</string>
    <string name="crud_url_dialog_invalid">Invalid URL. Please check and try again.</string>
    <string name="no_photo_msg">No photos found.</string>
    <string name="crud_appbar_title_edit">Edit Memo</string>
    <string name="crud_appbar_title_detail">Detail Memo</string>
    <string name="crud_appbar_title_add">Add Memo</string>
    <string name="crud_delete_dialog_positive">Delete</string>
    <string name="crud_delete_dialog_negative">Cancel</string>
    <string name="crud_delete_dialog_msg">Do you want to delete the Memo?</string>
    <string name="crud_url_dialog_edit_msg">Enter URL to modify.</string>
    <string name="crud_url_dialog_edit_positive">Modify</string>
</resources>
