<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<item
    android:id="@+id/action_save"
    android:title="@string/menu_save_title"
    android:icon="@drawable/ic_save_black_24dp"
    app:showAsAction="ifRoom" />
<item
    android:icon="@drawable/ic_attachment_black_24dp"
    android:title="@string/menu_attach_title"
    app:showAsAction="ifRoom">
    <menu>
        <item
            android:id="@+id/action_gallery"
            android:title="@string/menu_gallery_title" />
        <item
            android:id="@+id/action_camera"
            android:title="@string/menu_camera_title" />
        <item
            android:id="@+id/action_url"
            android:title="@string/menu_url_title" />
    </menu>
</item>
</menu>